# vurze

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: example.py
src/: crypto.rs  lib.rs
src/python/pyseal/: __init__.py  add_decorators.py  check_decorators.py  cli.py  remove_decorators.py  setup.py
src/python/pysealer/: __init__.py  add_decorators.py  cli.py
src/python/vurze/: __init__.py  add_decorators.py  check_decorators.py  cli.py  setup.py
src/rust/: crypto.rs  lib.rs  parser.rs
tests/: test_check.py  test_decorate.py  test_init_env.py  test_remove.py
