[package]
name = "vurze"
version = "0.1.0"
edition = "2021"
description = "Version control your Python functions with automated decorator injection"
license = "MIT"
repository = "https://github.com/yourusername/vurze"
homepage = "https://github.com/yourusername/vurze"
keywords = ["python", "security", "version-control", "decorators"]

# Rust-Python Bindings Library
[lib]
name = "vurze"
crate-type = ["cdylib"]

# CLI Binary
[[bin]]
name = "vurze"
path = "src/cli.rs"  

# General Project Dependencies
[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
clap = { version = "4.0", features = ["derive"] }
