[package]
name = "pyseal"
version = "0.1.0"
edition = "2021"
description = "Cryptographically sign Python functions and classes for defense-in-depth security."
license = "MIT"
repository = "https://github.com/MCP-Security-Research/pyseal"
keywords = ["rust", "python", "decorator", "cryptography"]

# Rust-Python Bindings Library
[lib]
name = "_pyseal"
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

# General Project Dependencies
[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
bs58 = "0.5"
