[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "vurze"
version = "0.1.0"
description = "Version control your Python functions and classes with automated cryptographic decorator injection."
authors = ["Aidan Dyga"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
keywords = ["rust", "python", "decorator", "version-control", "cryptography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.scripts]
vurze = "vurze.cli:main"

[project.urls]
Repository = "https://github.com/MCP-Security-Research/vurze"
Issues = "https://github.com/MCP-Security-Research/vurze/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "vurze._vurze"
